# feednet

./: CMakeLists.txt  README.md
resources/: icon.icns  resources.qrc
resources/data/: Alpha-Beta-Gamma  BinaryData  Digits_1_to_5  Rotations  Smiles  TicTacToe
src/: CharactPanel.cpp  CharactPanel.h  DSPreviewWidget.cpp  DSPreviewWidget.h  DatasetHouse.cpp  DatasetHouse.h  DrawingArea.cpp  DrawingArea.h  MainWindow.cpp  MainWindow.h  Network.cpp  Network.h  README.md  VisualNet.cpp  VisualNet.h  data_api.cpp  data_api.h  dataset_widget.cpp  dataset_widget.h  gui_properties.cpp  gui_properties.h  gui_widgets.cpp  gui_widgets.h  main.cpp  matrix_api.cpp  matrix_api.h  visualization.cpp  visualization.h  windows.cpp  windows.h
